Change Order ID to Long and add timestamp