@@ -1,11 +1,11 @@
 package dev.zsebel.kafka.producer.generators;
 
+import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Random;
-import java.util.UUID;
+import java.util.concurrent.ThreadLocalRandom;
 import java.util.concurrent.atomic.AtomicInteger;
-import java.util.stream.Collectors;
-import java.util.stream.IntStream;
+import java.util.stream.Stream;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
@@ -16,22 +16,27 @@ import dev.zsebel.kafka.domain.Product;
 @Component
 public class RandomOrderGenerator {
 
-    private final AtomicInteger orderId = new AtomicInteger(0);
+    private static final int MINIMUM_NUMBER_OF_PRODUCTS = 1;
+    private static final int MAXIMUM_NUMBER_OF_PRODUCTS = 5;
 
+    private final Random random = ThreadLocalRandom.current();
+    private final AtomicInteger orderId = new AtomicInteger(0);
     private final RandomProductGenerator randomProductGenerator;
 
     @Autowired
-    public RandomOrderGenerator(final RandomProductGenerator randomProductGenerator) {
+    RandomOrderGenerator(final RandomProductGenerator randomProductGenerator) {
         this.randomProductGenerator = randomProductGenerator;
     }
 
     public Order generate() {
-        // Temporarily disabled for testing
-        // UUID orderId = UUID.randomUUID();
-        int exclusiveUpperBound = new Random().nextInt(5) + 2;
-        List<Product> orderedProducts = IntStream.range(1, exclusiveUpperBound)
-            .mapToObj(i -> randomProductGenerator.generate())
-            .collect(Collectors.toList());
-        return new Order(String.valueOf(orderId.incrementAndGet()), orderedProducts);
+        List<Product> orderedProducts = generateRandomProducts();
+        return new Order((long) orderId.incrementAndGet(), orderedProducts, LocalDateTime.now());
+    }
+
+    private List<Product> generateRandomProducts() {
+        int numberOfProducts = random.nextInt(MAXIMUM_NUMBER_OF_PRODUCTS) + MINIMUM_NUMBER_OF_PRODUCTS;
+        return Stream.generate(randomProductGenerator::generateProduct)
+            .limit(numberOfProducts)
+            .toList();
     }
 }
